Fixed issues about heroku.

--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,8 @@
 	<head>
     	<title>Samuel Camarena Website</title>
 		<meta charset='utf-8'>
+	    <link rel="icon" href="../forumjs/public/images/favicon.ico" type="image/x-icon">
+	    
 		<style>
 			body {
 				margin: 0;
