Added a testing crypto file

--- a/views/index.html
+++ b/views/index.html
@@ -55,7 +55,7 @@
 				matArray.push( new THREE.MeshLambertMaterial( { color: 0xFBCD3A } ));
 				matArray.push( new THREE.MeshLambertMaterial( { color: 0xFBCD3A } ));
 				matArray.push( new THREE.MeshLambertMaterial( { color: 0xFBCD3A } ));
-				matArray.push( new THREE.MeshBasicMaterial( { map: new THREE.ImageUtils.loadTexture('../public/images/under_cons_front.gif') } ));
+				matArray.push( new THREE.MeshBasicMaterial( { map: new THREE.ImageUtils.loadTexture('http://home/samuel/Tmp/Descargas/Navegadores/PDFs%20de%20Navegador/personal-website/public/images/under_cons_front.gif') } ));
 				matArray.push( new THREE.MeshBasicMaterial( { map: new THREE.ImageUtils.loadTexture('../public/images/under_cons_back.gif') } ));
 				
 				var cubeFaceMat = new THREE.MeshFaceMaterial( matArray );
